# APIShift

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
APIShift/: __init__.py  context.py  conversation.py  exceptions.py  memory.py  providers.py
docs/: KEY_POOL_ROUTING.md  NPM_GUIDE.md  PYTHON_STREAMING.md
docs/plans/: 2026-01-21-apishift-modernization.md
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: context.ts  index.ts  memory.ts  openrouter.ts  orchestrator.ts  types.ts
js/test/: live-openrouter.mjs
site/app/: globals.css  layout.tsx  page.tsx
site/app/docs/: page.tsx
tests/: test_context_failover.py  test_context_memory_routing.py  test_conversation.py  test_conversation_streaming.py  test_live_integration.py  test_openrouter_streaming.py  test_provider_interface.py  test_same_provider_key_pool.py
