[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "APIShift"
version = "0.1.0"
description = "Same-provider LLM API key pooling with adaptive key rotation and optional cross-provider fallback."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name="Aditya190803", email="aditya.mer@somaiya.edu" }
]
keywords = ["llm", "api-keys", "key-pool", "orchestration", "failover", "openrouter", "gemini", "groq", "ai", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "groq",
    "google-generativeai",
    "requests",
    "faiss-cpu",
    "sentence-transformers",
    "httpx",
    "typing-extensions"
]

[project.urls]
Homepage = "https://github.com/Aditya190803/APIShift"
Repository = "https://github.com/Aditya190803/APIShift"

[tool.setuptools]
packages = ["APIShift"]

[tool.setuptools.exclude-package-data]
"*" = ["js/*", "site/*", "tests/*", "docs/*", ".github/*"]

[tool.pytest.ini_options]
markers = [
    "live: tests that call real provider APIs and require API keys",
]



